# AvitoTest

./: .env  .gitignore  .gitlab-ci.yml  BUGS.md  FIRST_TASK.md  README.md  TESTCASES.md  conftest.py  paths.py  pyproject.toml  pytest.ini  requirements.txt
API/data/: config_class.py  tasks.py
UI/: ui_fixtures.py
allure-results/: 03923d86-9361-4fa4-8330-73c72cd42a55-container.json  079333ff-6fbb-47e0-bc72-b937837885e6-container.json  0aa52f80-e976-4fe1-a5ab-2c3bb9b8fed1-container.json  0d54959a-a028-4a6f-ace9-419a3c471d9c-container.json  0e8006bc-ca59-4a8e-8aa2-39d9142c48b8-result.json  14ac7ea8-0b17-42e2-937e-212dfe590047-container.json  16f0f133-835d-4738-9664-5eeb0e491921-container.json  1b5d3cfd-25ea-43d7-9c9c-745b5a2fc7bd-container.json  1b6305d0-1b61-427f-8e20-53482315010a-container.json  1ce8812d-d426-49be-b8ee-1e4a358cb551-container.json  1eb6c73e-d146-40b1-bd81-5cc8bd583699-container.json  20fb4de6-03d9-4824-9e9b-d793a5ffa045-result.json  216d2942-c23d-4b47-9357-7a6337c0487e-attachment.txt  240cbe7f-2c7a-4221-b1d6-f67a1eaeaa02-container.json  24fdee3a-0d9c-46f8-86ba-cd3f0aab40aa-container.json  2ada9ebf-d71b-4973-bd3e-d8fc45154a98-container.json  2aebc375-ae4e-4e50-8f6f-d15c8e0b8f7f-attachment.txt  2b59d111-fc7c-4195-a3fd-5c9008cedcfc-result.json  2c3f396f-f2dd-44ad-9ff6-c869df12609f-result.json  2cec406b-a551-4400-a50f-70aec933dffe-result.json  2e3c51a7-817b-4e5f-98b2-c01bd75d44a2-container.json  33a115a5-17e2-4cc0-89b1-f8552bbdd3f5-attachment.txt  345a7603-4b31-408f-8f51-251c12b4ca60-container.json  3ade0387-df48-4cd7-a0d4-a08b4c2f2541-container.json  (+63 more)
(+11 files in other folders)
